--- a/index.html
+++ b/index.html
@@ -8,24 +8,27 @@
     <title>aboutme@idiot</title>
 </head>
 <body>
-    <div class="bigBodyPanel">
-        <h1 class="mainTitle">_dumbidiot_ - Teenage Front-End Developer And Cyber-Sec Amateur</h1>
-        <p class="quote" >"If you suck dick enough, life will soon start coming."</p>
-    </div>
-    <div class="panelHolder" >
-        <div class="subbigBodyPanel">
-            <h1>this is crazy</h1>
-            <p class="subPanelParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-        <div class="subbigBodyPanel">
-            <h1>holy fucking shit</h1>
-            <p class="subPanelParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <!-- loading animation ^^-->
 
+        <div class="bigBodyPanel">
+            <h1 class="mainTitle">_dumbidiot_ - Teenage Front-End Developer And Cyber-Sec Amateur</h1>
+            <p class="quote" >"If you suck dick enough, life will soon start coming."</p>
         </div>
-        <div class="subbigBodyPanel">
-            <h1>3 panels in a row due to the fact that css panels exist?!?!</h1>
-            <p class="subPanelParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-    </div>
+        <div class="panelHolder" >
+            <div class="subbigBodyPanel">
+                <h1>this is crazy</h1>
+                <p class="subPanelParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="subbigBodyPanel">
+                <h1>holy fucking shit</h1>
+                <p class="subPanelParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+            </div>
+            <div class="subbigBodyPanel">
+                <h1>3 panels in a row due to the fact that css panels exist?!?!</h1>
+                <p class="subPanelParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div
+
 </body>
 </html>
