did ~some~ touches and also expanded the max-width to 1100px in the main.css file

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             <div class="subbigBodyPanel">
                 <h1>- Experience -</h1>
                 <p class="subPanelParagraph">
-                    As a person who has been coding since a mere little child, i am comfortable saying i have quite the experience with programming. My first and main language is python. Im quite skilled at it and i have also used my skills to find vulnerabilities in many websites. I am also very good at html, and css, and is comfortable with javascript.
+                    As a person who has been coding since a mere little child, I am comfortable saying I have quite the experience with programming. My first and main language is python. Im quite skilled at it and i have also used my skills to find vulnerabilities in many websites. I am also very good at html, and css, and is comfortable with javascript.
                     <br />
                     <br />
-                    The exact time i have started programming in general isnt exact but i can say with confidence it was definitely during grade 1 or 2 (Year 1 or Year 2) But all in all that results in a total of 8-7 years of experience in python. I've started learning web-development around 4-5 years ago.  
+                    The exact time I have started programming in general isnt exact but I can say with confidence it was definitely during grade 1 or 2 (Year 1 or Year 2) But all in all that results in a total of 8-7 years of experience in python. I've started learning web-development around 4-5 years ago.  
                     <br />
                     <br />
                     I also found many security issues in my school's website. For example the fact that the teacher's accounts are secured with a function of otp means nothing when it can be bypassed when they provide un-monitored access to a student who can easily then steal the account cookie and therefore gain access to the account. another flaw in the system was the fact that the teachers could see extremely private information of students and edit vital parts of the schools system without any form of authorization (such as: otp, password, 2fa, etc)
                     <br />
                     <br />
-                    Another thing is i absolutely fly throught my computer classes. As a kid who was just generally gifted with technilogical prowess since birth, i also believe that alot of my skill was earned from hard work and dedication. And yes, i may not be the best out there but my skills are sure impressive.                    
+                    Another thing is I absolutely fly throught my computer classes. As a kid who was just generally gifted with technilogical prowess since birth, I also believe that alot of my skill was earned from hard work and dedication. And yes, I may not be the best out there but my skills are sure impressive.                    
                 </p>
             </div>
             <div class="subbigBodyPanel">
