--- a/index.html
+++ b/index.html
@@ -43,14 +43,28 @@
 
             <div class="subbigBodyPanelWide">
                 <h1>- Special Thanks -</h1>
-                <p class="subPanelParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <center>
+                <p class="subPanelParagraph">
+                    ⋅ My family ⋅<br />
+                    ⋅ My friends ⋅<br />
+                    ⋅ W3schools ⋅<br />
+                    ⋅ Google ⋅ <br />
+                    ⋅ Stack Overflow ⋅ <br />
+                    ⋅ You ⋅
+                </p>
+                </center>
             </div>
             <div class="subbigBodyPanelWide">
                 <h1>- Social Links -</h1>
             <center>
-                <p class="subPanelParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="subPanelParagraph">
+                    Want to contact me?<br />
+                    Want to view my work?<br />
+                    Click on the buttons bellow to check out my socials and github!
+                    
+                </p>
 
-                <a href="https://github.com/aUniqueUsernameWasTaken">
+                <a href="https://githttps://www.famousbirthdays.com/people/sematary.htmlhub.com/aUniqueUsernameWasTaken">
                     <img border="0" alt="myGuns.LolPage" src="./mats/guns.lol.png" width="45" height="40">
                 </a> 
 
