fixed wrong redirect on guns.lol button

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     
                 </p>
 
-                <a href="https://githttps://www.famousbirthdays.com/people/sematary.htmlhub.com/aUniqueUsernameWasTaken">
+                <a href="https://guns.lol/_dumbidiot_">
                     <img border="0" alt="myGuns.LolPage" src="./mats/guns.lol.png" width="45" height="40">
                 </a> 
 
