--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     The exact time I have started programming in general isnt exact but I can say with confidence it was definitely during grade 1 or 2 (Year 1 or Year 2) But all in all that results in a total of 8-7 years of experience in python. I've started learning web-development around 4-5 years ago.  
                     <br />
                     <br />
-                    I also found many security issues in my school's website. For example the fact that the teacher's accounts are secured with a function of otp means nothing when it can be bypassed when they provide un-monitored access to a student who can easily then steal the account cookie and therefore gain access to the account. another flaw in the system was the fact that the teachers could see extremely private information of students and edit vital parts of the schools system without any form of authorization (such as: otp, password, 2fa, etc)
+                    I also found many security issues in my school's website. For example the fact that the teacher's accounts are secured with 2FA (OTP) means nothing when it can be bypassed when they provide un-monitored access to a student who can easily then steal the account cookie and therefore gain access to the account. another flaw in the system was the fact that the teachers could see extremely private information of students and edit vital parts of the schools system without any form of authorization (such as: otp, password, 2fa, etc) Proving that not only is software precautions important but you must train your employees accordingly as well.
                     <br />
                     <br />
-                    Another thing is I absolutely fly throught my computer classes. As a kid who was just generally gifted with technilogical prowess since birth, I also believe that alot of my skill was earned from hard work and dedication. And yes, I may not be the best out there but my skills are sure impressive.                    
+                    I fly throught my computer classes. As a kid who was just generally gifted with technilogical prowess since birth, I also believe that alot of my skill was earned from hard work and dedication. And yes, I may not be the best out there but my skills are sure impressive.                    
                 </p>
             </div>
             <div class="subbigBodyPanel">
